--- a/lists-and-loops.ipynb
+++ b/lists-and-loops.ipynb
@@ -911,18 +911,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'int' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [40]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(name) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[1;32m      7\u001b[0m     missing_chars \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(name) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m6\u001b[39m\n\u001b[0;32m----> 8\u001b[0m     name \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmissing_chars\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Harryy!\n",
+      "Hello Hermoine!\n",
+      "Hello Ronnnn!\n",
+      "Hello Hagrid!\n",
+      "Hello Dumbledore!\n",
+      "Hello Daenerys, from the house of Targaryen\n",
+      "Hello Daenerys Targaryen!\n",
+      "Hello Jon, from the house of Snow\n",
+      "Hello Jon Snow!\n",
+      "Hello Tyrion, from the house of Lannister\n",
+      "Hello Tyrion Lannister!\n",
+      "Hello Cercei, from the house of Lannister\n",
+      "Hello Cercei Lannister!\n",
+      "Hello Arya, from the house of Stark\n",
+      "Hello Arya Stark!\n",
+      "Hello Sansa, from the house of Stark\n",
+      "Hello Sansa Stark!\n",
+      "Hello Aragorn!\n",
+      "Hello Gandalf!\n",
+      "Hello Frodoo!\n",
+      "Hello Legolas!\n",
+      "Hello Gollum!\n",
+      "Hello Gimlii!\n",
+      "Hello Walter, from the house of White\n",
+      "Hello Walter White!\n",
+      "Hello Jesse, from the house of Pinkman\n",
+      "Hello Jesse Pinkman!\n",
+      "Hello Gus, from the house of Fring\n",
+      "Hello Gus Fring!\n"
      ]
     }
    ],
@@ -933,19 +957,12 @@
     "        if len(full_name) > 1:\n",
     "            print(f\"Hello {full_name[0]}, from the house of {full_name[1]}\")\n",
     "        if len(name) < 6:\n",
-    "            missing_chars = len(name) - 6\n",
-    "            name += str(len(missing_chars))\n",
+    "            missing_chars = 6 - len(name) \n",
+    "            name += name[-1] * missing_chars\n",
     "            print(f\"Hello {name}!\")\n",
     "        else: \n",
     "            print(f\"Hello {name}!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
